k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: familybot
  namespace: familybot
spec:
  selector:
    app: familybot
  ports:
    - port: 8080
      targetPort: 8080
      name: http
